# ETFing

./: .gitignore  README.md  pyproject.toml  test.py
src/: create_tables.sql  populate_etfs.py  populate_stocks.py
test/: test.py
